<?xml version="1.0"?>
<package>
  <name>mongodb_orion_lib</name>
  <version>0.0.0</version>
  <description>The mongoDriver package from Orion</description>

  <maintainer email="na@nlink.no">N/A</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>MIT</license>

  <author email="na@nlink.no">N/A</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>catkin</build_depend>
  <build_depend>libmongoc-dev</build_depend>
  <build_depend>libmicrohttpd</build_depend>
  <build_depend>mosquitto-dev</build_depend>
  <build_depend>rapidjson-dev</build_depend>
  <build_depend>uuid</build_depend>
</package>
